# RAG

./: .gitignore  README.md
backend/: .env.example  pyproject.toml
backend/app/: config.py  db.py  main.py  models.py  schemas.py
backend/app/services/: openai_service.py  rag_service.py
frontend/src/app/: globals.css  page.tsx
